update chatGPT for recommended products